[package]
edition = "2021"
name = "rust_transformer"
version = "0.1.0"

[dependencies]
candle-core = {git = "https://github.com/huggingface/candle.git", version = "0.7.1"}
candle-examples = {git = "https://github.com/huggingface/candle.git", version = "0.7.1"}
candle-nn = {git = "https://github.com/huggingface/candle.git", version = "0.7.1"}
candle-transformers = {git = "https://github.com/huggingface/candle.git", version = "0.7.1"}
dotenv = "0.15.0"
hf-hub = "0.3.2"
serde_json = "1.0.128"
tokenizers = "0.20.0"
